src/styles.scss
@charset "utf-8";

// Icon font
@import url("https://use.fontawesome.com/releases/v5.1.0/css/all.css");
// initial variables
@import "../node_modules/bulma/sass/utilities/initial-variables";
//@import "../node_modules/bulma/sass/utilities/derived-variables";

$family-sans-serif: "Helvetica", "Arial", sans-serif;

$blue: #00447a;
$blue-invert: #fff;

$light-blue: #92acbe;
$light-blue-invert: #fff;

$primary: $blue;
$primary-invert: $blue-invert;

$secondary: $light-blue;
$secondary-invert: $light-blue-invert;

$navbar-dropdown-background-color: $secondary;

$custom-colors: ("secondary": ($secondary, $secondary-invert));

@import "../node_modules/bulma/bulma";
@import "../node_modules/bulma-divider/dist/css/bulma-divider";
@import "../node_modules/bulma-checkradio/dist/css/bulma-checkradio";

// custom classes


// container auto linewrap
.is-flowing {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.is-gaping {
  > * {
    margin: 10px 10px;
  }
}

.is-opaque {
  opacity: 0;
}

